--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <h1>
                                 SANART+
                             </h1>
-                            <p>
+                            <p class="add-left-margin">
                                 Крупнейший производитель профессиональных  
                                 химических продуктов ориентированный на 
                                 сотрудничество с авто индустрией.
@@ -123,7 +123,7 @@
                             <h1>
                                 Получите бесплатный образец
                             </h1>
-                            <p>
+                            <p class="add-left-margin">
                                 Мы уверены в качестве продукции и поэтому 
                                 совершенно бесплатно предлагаем вам образец. 
                                 Вы самостоятельно cможете убедиться, что 
@@ -664,7 +664,7 @@
                             <h1>
                                 О компании SANART+
                             </h1>
-                            <p>
+                            <p class="add-left-margin">
                                 Компания ООО «Санарт Плюс» является одной из 
                                 крупных поставщиков полного спектра расходных 
                                 материалов, инструмента, электрики и автохимии 
@@ -674,14 +674,14 @@
                                 как автосервисного так и промышленного 
                                 производства.
                             </p>
-                            <p>
+                            <p class="add-left-margin">
                                 История компании ООО «Санарт Плюс» начинается 
                                 в марте 2008 года. За время работы компании 
                                 нашими партнерами стало более 30 ведущих 
                                 поставщиков, среди них крупные известные 
                                 европейские и российские производители.
                             </p>
-                            <p>
+                            <p class="add-left-margin">
                                 Компания KABO TOOL COMPANY , Sunmatch, 
                                 Технопродуктавтомотив, Росбаланс, Berner, 
                                 ООО "НИКА” Официальный дистрибьютор компании 
@@ -689,7 +689,7 @@
                                 МАСТАК, ООО "Автомобильная упаковка" и многие 
                                 другие.
                             </p>
-                            <p>
+                            <p class="add-left-margin">
                                 Мы предлагаем технически грамотное, быстрое и 
                                 гибкое обслуживание по конкурентоспособным 
                                 ценам, которое позволит Вам снизить затраты и 
@@ -827,7 +827,7 @@
                                     </h2>
                                     <p>
                                         Компания
-                                        <a href="#" class="link-version">
+                                        <a href="#">
                                             «ДИН Технолоджи»
                                         </a>
                                         является 
@@ -841,7 +841,7 @@
                                         ул. Орджоникидзе, д. 44/3, лит. Б
                                     </p>
                                     <p>
-                                        <a href="#" class="link-version">
+                                        <a href="#">
                                             Скачать реквизиты (PDF)
                                         </a>
                                     </p>
@@ -862,7 +862,7 @@
                                         потребуются ваши реквизиты. Пришлите их,
                                         пожалуйста, по электронной почте на 
                                         адрес
-                                        <a href="#" class="link-version">
+                                        <a href="#">
                                             globe@din-tech.ru.
                                         </a>
                                     </p>
@@ -903,7 +903,7 @@
         <!-- FOOTER -->
         
         <footer class="background">
-            <a href="http://www.din-tech.ru/">Din-Technology 2015</a>
+            <a href="#">Din-Technology 2015</a>
         </footer>
         
         <!-- END -->
