--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-    
     <head>
         <title>Sanart+ - автохимия, автокосметика от производителя</title>
         <meta charset="UTF-8">
@@ -764,7 +763,7 @@
                             <h1>
                                 Отзывы
                             </h1>
-                            <div class="col span_4_of_12">
+                            <div class="col span_4_of_12 clear-margin-top">
                                 <div class="wrapp-div-for-review">
                                     <p>
                                         Блок с отзывами ваших клиентов, можете 
@@ -777,7 +776,7 @@
                                     </span>                                    
                                 </div>
                             </div>
-                            <div class="col span_4_of_12">
+                            <div class="col span_4_of_12 clear-margin-top">
                                 <div class="wrapp-div-for-review">
                                     <p>
                                         Блок с отзывами ваших клиентов, можете 
@@ -790,7 +789,7 @@
                                     </span>                                    
                                 </div>
                             </div>
-                            <div class="col span_3_of_12">
+                            <div class="col span_3_of_12 clear-margin-top">
                                 <div class="wrapp-div-for-review">
                                     <p>
                                         Блок с отзывами ваших клиентов, можете 
