--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
         <!-- FORM FEEDBACK -->
         
         <div id="wrapp_form_feedback">
-            <div>
+            <div class="add-border-bottom">
                 <h3 class="name-of-form">Связаться</h3>
                 <span class="btn-close">✖</span>
             </div>
-            <div>
+            <div class="add-border-bottom">
                 <p>
-                    Телефон: +7 (812) 372-67-87, мы работаем с 9:00 до 18:00<br>
+                    Телефон: +7 (812) 372-67-87, с 9:00 до 18:00<br>
                     Адрес: Санкт-Петербург, ул. Орджоникидзе, 44/3
                 </p>
             </div>
             <div>
                 <form class="form-feedback" method="post" action="#">
                     <div class="section group">
-                        <label class="name-field">Ваше имя:</label>
+                        <label class="label-field">Ваше имя:</label>
                         <input type="text" name="first_name" class="field"><br>
-                        <label class="name-field">Эл. почта:</label>
+                        <label class="label-field">Эл. почта:</label>
                         <input type="email" name="e_mail" class="field"><br>
-                        <label class="name-field">Сообщение:</label>
+                        <label class="label-field">Сообщение:</label>
                         <textarea name="message"></textarea><br>
                     </div>
                     <div class="wrapp-checkbox">
@@ -164,7 +164,7 @@
             <div class="section group">
                 <div class="wrapper-section-content group">
                     <div class="col span_1_of_12"></div>
-                    <div class="col span_8_of_12">
+                    <div class="col span_9_of_12">
                         <div class="example-block color-ver2">
                             <h2>
                                 Получите бесплатный образец
@@ -192,7 +192,7 @@
             <div class="section group">
                 <div class="wrapper-section-content group white-background">
                     <div class="col span_1_of_12"></div>
-                    <div class="col span_8_of_12">
+                    <div class="col span_10_of_12">
                         <div class="range-block">
                             <h2 class="h2-color-version">
                                 Ассортимент продукции
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ ТОРМОЗОВ
+                                        Очиститель тормозов
                                     </h3>
                                     <p class="description-product">
                                         Обезжиривание различных деталей, 
@@ -234,13 +234,13 @@
                                              class="adaptive-img">
                                     </div>
                                 </div>
-                                <div class="col span_7_of_12">
+                                <div class="col span_8_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ КАРБЮРАТОРА ДРОССЕЛЬНЫХ 
-                                        ЗАСЛОНОК
+                                        Очиститель карбюратора дроссельных
+                                        заслонок
                                     </h3>
                                     <p class="description-product">
-                                        Специальный системный очиститель для 
+                                        специальный системный очиститель для 
                                         2- и 4-тактных двигателей.
                                     </p>
                                     <span class="id-product">
@@ -265,7 +265,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        РАСТВОРИТЕЛЬ РЖАВЧИНЫ
+                                        Растворитель ржавчины
                                     </h3>
                                     <p class="description-product">
                                         Эффективное удаление ржавчины. 
@@ -294,7 +294,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        СИНТЕТИЧЕСКАЯ СМАЗКА NFZ 2000
+                                        Синтетическая смазка nfz 2000
                                     </h3>
                                     <p class="description-product">
                                         Применяется для смазки петель, болтов, 
@@ -324,7 +324,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        СПРЕЙ ДЛЯ АККУМУЛЯТОРНЫХ КЛЕММ
+                                        Спрей для аккумуляторных клемм
                                     </h3>
                                     <p class="description-product">
                                         Эффективная защита. Устраняет переходное
@@ -352,7 +352,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ СТЁКОЛ
+                                        Очиститель стёкол
                                     </h3>
                                     <p class="description-product">
                                         Стеклянные и хромированные поверхности, 
@@ -380,7 +380,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ САЛОНА PREMIUM
+                                        Очиститель салона premium
                                     </h3>
                                     <p class="description-product">
                                         Для полной очистки салона автомобиля, 
@@ -409,7 +409,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ ИНДУСТРИАЛЬНЫЙ
+                                        Очиститель индустриальный
                                     </h3>
                                     <p class="description-product">
                                         Очищает различные детали из металла и 
@@ -437,7 +437,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ САЛОНА УНИВЕРСАЛЬНЫЙ
+                                        Очиститель салона универсальный
                                     </h3>
                                     <p class="description-product">
                                         Для полной очистки салона автомобиля - 
@@ -464,7 +464,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ПЕНА ДЛЯ ШИН
+                                        Пена для шин
                                     </h3>
                                     <p class="description-product">
                                         Для обработки шин, автомобильных 
@@ -492,7 +492,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        MULTI СМАЗКА-СПРЕЙ SWD 40 +
+                                        Multi смазка-спрей swd 40 +
                                     </h3>
                                     <p class="description-product">
                                         Смазывает замки, петли , втулки, цепи, 
@@ -520,7 +520,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        СМАЗКА МЕДНАЯ
+                                        Смазка медная
                                     </h3>
                                     <p class="description-product">
                                         Используется для смазки шпилек 
@@ -551,7 +551,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        СМАЗКА СИЛИКОНОВАЯ
+                                        Смазка силиконовая
                                     </h3>
                                     <p class="description-product">
                                         Уход и защита панелей, резиновых 
@@ -581,7 +581,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        СМАЗКА СУХАЯ PTFE
+                                        Смазка сухая ptfe
                                     </h3>
                                     <p class="description-product">
                                         Применяется для металла, пластмассы, 
@@ -612,7 +612,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ПРИСАДКА К ДИЗТОПЛИВУ
+                                        Присадка к дизтопливу
                                     </h3>
                                     <p class="description-product">
                                         Для всех дизельных двигателей с 
@@ -642,7 +642,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ПРИСАДКА БЕНЗИНОВАЯ
+                                        Присадка бензиновая
                                     </h3>
                                     <p class="description-product">
                                         Для всех двигателей внутреннего сгорания
@@ -674,7 +674,7 @@
                                 </div>
                                 <div class="col span_7_of_12">
                                     <h3>
-                                        ОЧИСТИТЕЛЬ ДЛЯ РУК
+                                        Очиститель для рук
                                     </h3>
                                     <p class="description-product">
                                         Применяется для очищения рук от стойких 
