--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Sanart+ - автохимия, автокосметика от производителя</title>
+        <title>Sanart+ - автохимия, автокосметика от производителя1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/html5reset.css" rel="stylesheet">
