Change email company and size column site's name.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Sanart+ - автохимия, автокосметика от производителя1</title>
+        <title>Sanart+ - автохимия, автокосметика от производителя</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/html5reset.css" rel="stylesheet">
@@ -67,7 +67,7 @@
         
         <header class="background">
             <div class="section group">
-                <div class="col span_8_of_12">   
+                <div class="col span_7_of_12">   
                     <a href="#" class="product">
                         Автохимия от компании SANART+
                     </a>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col span_2_of_12">   
                     <span class="mail-company color-ver2" id="e_mail_din_tech">
-                        globe@din-tech.ru
+                        office@dintechnology.ru
                     </span>
                 </div>            
             </div>
@@ -909,7 +909,7 @@
                                         пожалуйста, по электронной почте на 
                                         адрес
                                         <a href="#">
-                                            globe@din-tech.ru.
+                                            office@dintechnology.ru
                                         </a>
                                     </p>
                                 </div>
